// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> StandardLink story renders snapshot 1`] = `
<a
  class="button variantLink colorBrand"
  href=""
>
  ​
  Link
</a>
`;

exports[`<Link /> buttonVariantWithIcon story renders snapshot 1`] = `
<a
  class="button sizeMedium variantFlat colorBrand"
  href=""
>
  ​
  Link 
  <svg
    aria-hidden="true"
    class="iconButton svgIcon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18 13h-5v5c0 .55-.45 1-1 1s-1-.45-1-1v-5H6c-.55 0-1-.45-1-1s.45-1 1-1h5V6c0-.55.45-1 1-1s1 .45 1 1v5h5c.55 0 1 .45 1 1s-.45 1-1 1z"
    />
  </svg>
</a>
`;

exports[`<Link /> buttonVariantWithOnlyIcon story renders snapshot 1`] = `
<a
  class="button sizeMedium variantFlat colorBrand"
>
  ​
  <svg
    class="svgIcon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      add
    </title>
    <path
      d="M18 13h-5v5c0 .55-.45 1-1 1s-1-.45-1-1v-5H6c-.55 0-1-.45-1-1s.45-1 1-1h5V6c0-.55.45-1 1-1s1 .45 1 1v5h5c.55 0 1 .45 1 1s-.45 1-1 1z"
    />
  </svg>
</a>
`;

exports[`<Link /> linkInBody story renders snapshot 1`] = `
<p
  class="typography sizeBody colorBase"
>
  This text surrounds the 
  <a
    class="button variantLink colorBrand"
    href=""
  >
    ​
    Link
  </a>
   and shows that the link should adhere to its appearance
</p>
`;

exports[`<Link /> linkInHeading story renders snapshot 1`] = `
<p
  class="typography sizeH1 colorBase"
>
  This text surrounds the 
  <a
    class="button variantLink colorBrand"
    href=""
  >
    ​
    Link
  </a>
   and shows that the link should adhere to its appearance
</p>
`;

exports[`<Link /> linkWithIcon story renders snapshot 1`] = `
<a
  class="button variantLink colorBrand"
  href=""
>
  ​
  Link 
  <svg
    aria-hidden="true"
    class="iconLink svgIcon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18 13h-5v5c0 .55-.45 1-1 1s-1-.45-1-1v-5H6c-.55 0-1-.45-1-1s.45-1 1-1h5V6c0-.55.45-1 1-1s1 .45 1 1v5h5c.55 0 1 .45 1 1s-.45 1-1 1z"
    />
  </svg>
</a>
`;

exports[`<Link /> plainSmall story renders snapshot 1`] = `
<a
  class="button sizeSmall variantPlain colorBrand"
>
  ​
  Link 
  <svg
    aria-hidden="true"
    class="iconButton svgIcon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18 13h-5v5c0 .55-.45 1-1 1s-1-.45-1-1v-5H6c-.55 0-1-.45-1-1s.45-1 1-1h5V6c0-.55.45-1 1-1s1 .45 1 1v5h5c.55 0 1 .45 1 1s-.45 1-1 1z"
    />
  </svg>
</a>
`;

exports[`<Link /> withClassName story renders snapshot 1`] = `
<a
  class="example-className button variantLink colorBrand"
  href=""
>
  ​
  Link
</a>
`;

exports[`<Link /> withDataTestId story renders snapshot 1`] = `
<a
  class="button variantLink colorBrand"
  data-testid="fake-test-id"
  href=""
>
  ​
  Link
</a>
`;
